# NTHU_GPA_FinalProject_Indoor

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: Importer.hpp.5806279C85933AAF.idx  MathFunctions.h.9F495E63BAF3D3C1.idx  _fixes.hpp.68B77F6452E53188.idx  _swizzle_func.hpp.BB682144D8224831.idx  _vectorize.hpp.D8EF4AF69335895F.idx  aabb.h.9CE5ACDBFEB23884.idx  anim.h.3338195BFDE3D5E5.idx  camera.h.121556956B20AA65.idx  camera.hpp.83A5088DB42B1B8B.idx  cimport.h.765D28083D4384AF.idx  color4.h.14D629A39B19B12F.idx  color4.inl.6F796B4C5EE72582.idx  common.hpp.0EC214C8E042B8C1.idx  common.hpp.B0DED0A17C36D0EE.idx  compute_common.hpp.25C685320F92B3A0.idx  compute_vector_relational.hpp.21CEEB8D1C8F485F.idx  constants.hpp.FFAAF42A7AF51D80.idx  constants.inl.06752E741C886F45.idx  defs.h.F13D509F26B2E2C3.idx  epsilon.hpp.2DE5BBF662FB59DA.idx  epsilon.inl.D267BB03FD54CF87.idx  exponential.hpp.4F77CC2DAFE42996.idx  frame.hpp.14EC0C6EF37ECB16.idx  func_common.inl.A167835E366D3372.idx  func_exponential.inl.17B70049F3AF4F5C.idx  func_geometric.inl.3A377CCEB74ED45E.idx  func_integer.inl.4D9DF6CB69F2A2DC.idx  func_matrix.inl.A0B4C87687AC9470.idx  func_packing.inl.3B0DC9DFE276DCD7.idx  func_trigonometric.inl.AE79FB4466DD75AF.idx  func_vector_relational.inl.E1A5A9A178D0793E.idx  fwd.hpp.4D093F22B7F3EF9C.idx  geometric.hpp.23E71819FF6FA817.idx  glad.c.1B50CD6EE8C3058D.idx  glad.h.45551921F97FABC5.idx  glfw3.h.F80A769E1C911245.idx  glm.hpp.BE3A6F604C3B37BC.idx  imconfig.h.9A7643F78516E153.idx  imgui.cpp.10049833A0D16FFF.idx  imgui.h.7E6F5F92FEB595A2.idx  (+202 more)
asset/: fragment.fs.glsl  vertex.vs.glsl
asset/indoor/: Grey_White_Room.mtl
assets/: bloomFragment.fs.glsl  fragment.fs.glsl  frameFragment.fs.glsl  vertex.vs.glsl
assets/shader/: FXAAFragment.fs.glsl  SSAOFragment.fs.glsl  baseFragment.fs.glsl  baseVertex.vs.glsl  deferredFragment.fs.glsl  frameFragment.fs.glsl  frameVertex.vs.glsl  pointShadowFragment.fs.glsl  pointShadowGeometry.gs.glsl  pointShadowVertex.vs.glsl  projectionVertex.vs.glsl  shadowVertex.vs.glsl
bin-Windows-x64-Release/: imgui.ini
bin-Windows-x64-Release/assets/shader/: FXAAFragment.fs.glsl  deferredFragment.fs.glsl  frameFragment.fs.glsl  pointShadowVertex.vs.glsl  projectionFragment.fs.glsl  shadowFragment.fs.glsl  shadowVertex.vs.glsl
build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake  imgui.ini
build-mingw/assets/: fragment.fs.glsl
build-mingw/ext/assimp-5.2.5/: Makefile  assimp.pc  cmake_install.cmake  revision.h
build-mingw/ext/assimp-5.2.5/code/: Makefile  cmake_install.cmake
build-mingw/ext/assimp-5.2.5/contrib/zlib/: CTestTestfile.cmake  Makefile  cmake_install.cmake  zlib.pc
build-mingw/ext/assimp-5.2.5/test/: Makefile  cmake_install.cmake
build-mingw/ext/assimp-5.2.5/test/headercheck/: Makefile  cmake_install.cmake
build-mingw/ext/glfw-3.3.8/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
build-mingw/ext/glfw-3.3.8/src/: Makefile  cmake_install.cmake  glfw3.pc
ext/STB/: stb_image.h
ext/utils/: timer.hpp
include/: areaLight.hpp  camera.hpp  common.hpp  frame.hpp  imguiPanel.hpp  mesh.hpp  model.hpp  shader.hpp  shadowFrame.hpp  texture.hpp
src/: areaLight.cpp  camera.cpp  common.cpp  frame.cpp  imguiPanel.cpp  main.cpp  mesh.cpp  model.cpp  shader.cpp  shadowFrame.cpp  texture.cpp
